Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Ukraine đồng ý ngừng bắn 30 ngày với Nga, ông Trump lên tiếng",
+    "content": "Ukraine đã đồng ý ngừng bắn 30 ngày với Nga trong một thỏa thuận do Tổng thống Mỹ Donald Trump thúc đẩy. Ông Trump đã thông báo sẽ điện đàm với Tổng thống Nga Vladimir Putin và mời Tổng thống Ukraine Volodymyr Zelensky trở lại Nhà Trắng. Thỏa thuận này được đưa ra sau cuộc hội đàm kéo dài 8 giờ giữa phái đoàn Mỹ và Ukraine tại Ả Rập Xê Út. Tuy nhiên, Moscow vẫn chưa đưa ra phản ứng chính thức về đề xuất này.",
+    "link": "https://dantri.com.vn/the-gioi/ukraine-dong-y-ngung-ban-30-ngay-voi-nga-ong-trump-len-tieng-20250312043333942.htm",
+    "cat": "the-gioi",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Ukraine vừa đồng ý ngừng bắn với Nga trong bao lâu?",
+    "answers": [
+      {
+        "text": "30 ngày",
+        "correct": true
+      },
+      {
+        "text": "15 ngày",
+        "correct": false
+      },
+      {
+        "text": "45 ngày",
+        "correct": false
+      },
+      {
+        "text": "60 ngày",
+        "correct": false
+      },
+      {
+        "text": "90 ngày",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Mỹ sẽ ngay lập tức dỡ bỏ lệnh tạm dừng viện trợ quân sự cho Ukraine",
     "content": "Mỹ đã quyết định dỡ bỏ lệnh tạm dừng viện trợ quân sự cho Ukraine và sẽ tiếp tục chia sẻ thông tin tình báo. Thỏa thuận này được đạt được sau cuộc họp kéo dài 8 giờ giữa các phái đoàn của Mỹ và Ukraine tại Ả rập Xê út. Ukraine cũng đã đồng ý đề xuất của Mỹ về việc thực hiện một lệnh ngừng bắn tạm thời kéo dài 30 ngày, nhằm đạt được hòa bình và ổn định trong khu vực. Tổng thống Zelensky bày tỏ sự sẵn sàng hợp tác với Mỹ và nhấn mạnh tầm quan trọng của việc Nga phải đồng ý với các điều kiện ngừng bắn.",
     "link": "https://dantri.com.vn/the-gioi/my-se-ngay-lap-tuc-do-bo-lenh-tam-dung-vien-tro-quan-su-cho-ukraine-20250312015104472.htm",
@@ -1160,33 +1191,6 @@
     ]
   },
   {
-    "title": "Lý do người bệnh viêm khớp nên hạn chế đường",
-    "content": "Bài viết nhấn mạnh rằng người bệnh viêm khớp nên hạn chế tiêu thụ đường để giảm tình trạng viêm và kiểm soát các triệu chứng bệnh. Đường không chỉ làm tăng axit uric mà còn có thể dẫn đến các vấn đề sức khỏe khác như bệnh tim mạch và béo phì, làm trầm trọng thêm tình trạng viêm khớp. Nghiên cứu cho thấy các loại thực phẩm và đồ uống có đường, như soda và bánh ngọt, có thể làm nặng thêm các triệu chứng viêm khớp dạng thấp và thoái hóa khớp. Do đó, người bệnh cần chú ý đến lượng đường nạp vào hàng ngày để cải thiện sức khỏe khớp.",
-    "link": "https://vnexpress.net/ly-do-nguoi-benh-viem-khop-nen-han-che-duong-4859548.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tại sao người bệnh viêm khớp nên hạn chế đường?",
-    "answers": [
-      {
-        "text": "Đường có thể làm tăng tình trạng viêm và đau khớp.",
-        "correct": true
-      },
-      {
-        "text": "Đường giúp cải thiện sức khỏe khớp.",
-        "correct": false
-      },
-      {
-        "text": "Đường là nguồn năng lượng cần thiết cho cơ thể.",
-        "correct": false
-      },
-      {
-        "text": "Đường không ảnh hưởng đến viêm khớp.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Thói quen nào khiến sức khỏe phụ nữ giảm sút?",
     "content": "Bài viết điểm qua những thói quen ăn uống và sinh hoạt có thể ảnh hưởng tiêu cực đến sức khỏe của phụ nữ. Những thói quen tưởng chừng như vô hại nhưng lại gây ra sự thay đổi trong quá trình trao đổi chất và nội tiết. Việc nhận thức và thay đổi những thói quen này là rất quan trọng để duy trì sức khỏe tốt cho phái đẹp.",
     "link": "https://vnexpress.net/thoi-quen-nao-khien-suc-khoe-phu-nu-giam-sut-4859901.html",
@@ -1213,6 +1217,33 @@
       },
       {
         "text": "Giữ tâm lý tích cực",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lý do người bệnh viêm khớp nên hạn chế đường",
+    "content": "Bài viết nhấn mạnh rằng người bệnh viêm khớp nên hạn chế tiêu thụ đường để giảm tình trạng viêm và kiểm soát các triệu chứng bệnh. Đường không chỉ làm tăng axit uric mà còn có thể dẫn đến các vấn đề sức khỏe khác như bệnh tim mạch và béo phì, làm trầm trọng thêm tình trạng viêm khớp. Nghiên cứu cho thấy các loại thực phẩm và đồ uống có đường, như soda và bánh ngọt, có thể làm nặng thêm các triệu chứng viêm khớp dạng thấp và thoái hóa khớp. Do đó, người bệnh cần chú ý đến lượng đường nạp vào hàng ngày để cải thiện sức khỏe khớp.",
+    "link": "https://vnexpress.net/ly-do-nguoi-benh-viem-khop-nen-han-che-duong-4859548.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tại sao người bệnh viêm khớp nên hạn chế đường?",
+    "answers": [
+      {
+        "text": "Đường có thể làm tăng tình trạng viêm và đau khớp.",
+        "correct": true
+      },
+      {
+        "text": "Đường giúp cải thiện sức khỏe khớp.",
+        "correct": false
+      },
+      {
+        "text": "Đường là nguồn năng lượng cần thiết cho cơ thể.",
+        "correct": false
+      },
+      {
+        "text": "Đường không ảnh hưởng đến viêm khớp.",
         "correct": false
       }
     ]
@@ -1883,28 +1914,28 @@
     ]
   },
   {
-    "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
-    "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
-    "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
+    "title": "Lợi ích khi ăn dâu tây thường xuyên",
+    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
     "cat": "suc-khoe",
-    "positivity": 7,
+    "positivity": 9,
     "importance": 8,
-    "question": "Gan nhiễm mỡ có thể chuyển thành viêm gan không?",
+    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
     "answers": [
       {
-        "text": "Có, nhưng không phải tất cả trường hợp.",
+        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
         "correct": true
       },
       {
-        "text": "Không, gan nhiễm mỡ không ảnh hưởng gì.",
+        "text": "Tăng huyết áp nhanh chóng.",
         "correct": false
       },
       {
-        "text": "Chỉ có trường hợp gan nhiễm mỡ do bia rượu mới tiến triển.",
+        "text": "Gây ra tình trạng thừa cân.",
         "correct": false
       },
       {
-        "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
+        "text": "Làm yếu hệ miễn dịch.",
         "correct": false
       }
     ]
@@ -1937,28 +1968,28 @@
     ]
   },
   {
-    "title": "Lợi ích khi ăn dâu tây thường xuyên",
-    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
+    "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
+    "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
+    "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
     "cat": "suc-khoe",
-    "positivity": 9,
+    "positivity": 7,
     "importance": 8,
-    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
+    "question": "Gan nhiễm mỡ có thể chuyển thành viêm gan không?",
     "answers": [
       {
-        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
+        "text": "Có, nhưng không phải tất cả trường hợp.",
         "correct": true
       },
       {
-        "text": "Tăng huyết áp nhanh chóng.",
+        "text": "Không, gan nhiễm mỡ không ảnh hưởng gì.",
         "correct": false
       },
       {
-        "text": "Gây ra tình trạng thừa cân.",
+        "text": "Chỉ có trường hợp gan nhiễm mỡ do bia rượu mới tiến triển.",
         "correct": false
       },
       {
-        "text": "Làm yếu hệ miễn dịch.",
+        "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
         "correct": false
       }
     ]
@@ -3664,37 +3695,6 @@
       },
       {
         "text": "Bệnh tiểu đường",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Nga cáo buộc Anh cản trở lộ trình hòa bình ở Ukraine",
-    "content": "Nga đã chỉ trích chính phủ Anh, cáo buộc London đang tìm cách cản trở nỗ lực của Tổng thống Mỹ Donald Trump trong việc tìm kiếm giải pháp hòa bình cho xung đột Ukraine. Cơ quan Tình báo Đối ngoại Nga (SVR) cho rằng Anh lo ngại việc Mỹ và Nga đàm phán có thể ảnh hưởng đến chiến lược kiềm chế Moscow của họ. Trong khi đó, ông Trump đã có những câu hỏi khiến Thủ tướng Anh Keir Starmer bối rối về khả năng đối phó với Nga, cho thấy sự căng thẳng trong quan hệ giữa các bên.",
-    "link": "https://dantri.com.vn/the-gioi/nga-cao-buoc-anh-can-tro-lo-trinh-hoa-binh-o-ukraine-20250311084436471.htm",
-    "cat": "the-gioi",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Nga cáo buộc Anh cản trở điều gì trong xung đột Ukraine?",
-    "answers": [
-      {
-        "text": "Nỗ lực hòa bình của Mỹ",
-        "correct": true
-      },
-      {
-        "text": "Chương trình viện trợ quân sự",
-        "correct": false
-      },
-      {
-        "text": "Quan hệ với NATO",
-        "correct": false
-      },
-      {
-        "text": "Các cuộc đàm phán cấp cao",
-        "correct": false
-      },
-      {
-        "text": "Hỗ trợ quân sự cho Ukraine",
         "correct": false
       }
     ]
