Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,68 @@
     */
     const newsData = [
   {
+    "title": "Kane đưa Bayern vào tứ kết Champions League",
+    "content": "Harry Kane đã có một màn trình diễn ấn tượng khi ghi một bàn và kiến tạo một bàn giúp Bayern Munich đánh bại Bayer Leverkusen 2-0 ở trận lượt về vòng 1/8 Champions League, qua đó giành chiến thắng chung cuộc 5-0. Kane trở thành cầu thủ người Anh đầu tiên đạt mốc 10 bàn trong một mùa giải Champions League. Bayern sẽ gặp Inter Milan ở tứ kết, với trận lượt đi diễn ra tại Allianz Arena vào ngày 8/4.",
+    "link": "https://vnexpress.net/kane-dua-bayern-vao-tu-ket-champions-league-4860106.html",
+    "cat": "the-thao",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Kane đã ghi bao nhiêu bàn trong trận đấu với Leverkusen?",
+    "answers": [
+      {
+        "text": "1 bàn",
+        "correct": true
+      },
+      {
+        "text": "2 bàn",
+        "correct": false
+      },
+      {
+        "text": "0 bàn",
+        "correct": false
+      },
+      {
+        "text": "3 bàn",
+        "correct": false
+      },
+      {
+        "text": "4 bàn",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Barca vào tứ kết Champions League",
+    "content": "Trong trận lượt về vòng 1/8 Champions League diễn ra tối 11/3, Barcelona đã đánh bại Benfica với tỷ số 3-1, qua đó giành quyền vào tứ kết. Yamal và Raphinha đã có những bàn thắng quan trọng, với Raphinha ghi bàn thứ ba, nâng tổng số bàn thắng của mình tại giải lên 11. Barcelona thể hiện sự vượt trội với 65% thời gian kiểm soát bóng và sẽ gặp đội thắng trong cặp Lille - Dortmund tại tứ kết.",
+    "link": "https://vnexpress.net/barca-vao-tu-ket-champions-league-4860103.html",
+    "cat": "the-thao",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Barcelona đã giành chiến thắng trước đội nào để vào tứ kết Champions League?",
+    "answers": [
+      {
+        "text": "Benfica",
+        "correct": true
+      },
+      {
+        "text": "Lille",
+        "correct": false
+      },
+      {
+        "text": "Dortmund",
+        "correct": false
+      },
+      {
+        "text": "Real Madrid",
+        "correct": false
+      },
+      {
+        "text": "Manchester City",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ukraine đồng ý ngừng bắn 30 ngày với Nga, ông Trump lên tiếng",
     "content": "Ukraine đã đồng ý ngừng bắn 30 ngày với Nga trong một thỏa thuận do Tổng thống Mỹ Donald Trump thúc đẩy. Ông Trump đã thông báo sẽ điện đàm với Tổng thống Nga Vladimir Putin và mời Tổng thống Ukraine Volodymyr Zelensky trở lại Nhà Trắng. Thỏa thuận này được đưa ra sau cuộc hội đàm kéo dài 8 giờ giữa phái đoàn Mỹ và Ukraine tại Ả Rập Xê Út. Tuy nhiên, Moscow vẫn chưa đưa ra phản ứng chính thức về đề xuất này.",
     "link": "https://dantri.com.vn/the-gioi/ukraine-dong-y-ngung-ban-30-ngay-voi-nga-ong-trump-len-tieng-20250312043333942.htm",
@@ -1259,33 +1321,6 @@
     ]
   },
   {
-    "title": "Capello: 'Guardiola mất nhiều Champions League vì kiêu ngạo'",
-    "content": "Cựu HLV Fabio Capello cho rằng Pep Guardiola đã mất nhiều cơ hội giành Champions League do sự kiêu ngạo của mình. Theo ông, Guardiola thường thay đổi chiến thuật một cách kỳ lạ trong các trận đấu quyết định, khiến ông không tập trung vào sức mạnh của cầu thủ. Capello cũng nhấn mạnh rằng ảnh hưởng của Guardiola đã khiến bóng đá Italy bị ảnh hưởng xấu, khi nhiều người cố gắng sao chép phong cách của ông mà không có đủ khả năng tương tự.",
-    "link": "https://vnexpress.net/capello-guardiola-mat-nhieu-champions-league-vi-kieu-ngao-4860006.html",
-    "cat": "the-thao",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Tại sao Capello cho rằng Guardiola mất nhiều Champions League?",
-    "answers": [
-      {
-        "text": "Vì sự kiêu ngạo và thay đổi chiến thuật kỳ lạ.",
-        "correct": true
-      },
-      {
-        "text": "Vì không có đủ cầu thủ giỏi.",
-        "correct": false
-      },
-      {
-        "text": "Vì không đủ may mắn trong các trận đấu.",
-        "correct": false
-      },
-      {
-        "text": "Vì không chú trọng vào phòng ngự.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Ai dễ bị ngưng thở khi ngủ?",
     "content": "Hội chứng ngưng thở khi ngủ không chỉ xảy ra ở người lớn mà còn có thể ảnh hưởng đến trẻ em. Nhiều người có suy nghĩ sai lầm rằng trẻ em không mắc phải tình trạng này. Bài viết chỉ ra rằng có nhiều yếu tố làm tăng nguy cơ mắc hội chứng ngưng thở khi ngủ ở trẻ em, do đó cần chú ý và phát hiện sớm để điều trị kịp thời.",
     "link": "https://vnexpress.net/ai-de-bi-ngung-tho-khi-ngu-4859945.html",
@@ -1312,6 +1347,33 @@
       },
       {
         "text": "Người có bệnh tim mạch",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Capello: 'Guardiola mất nhiều Champions League vì kiêu ngạo'",
+    "content": "Cựu HLV Fabio Capello cho rằng Pep Guardiola đã mất nhiều cơ hội giành Champions League do sự kiêu ngạo của mình. Theo ông, Guardiola thường thay đổi chiến thuật một cách kỳ lạ trong các trận đấu quyết định, khiến ông không tập trung vào sức mạnh của cầu thủ. Capello cũng nhấn mạnh rằng ảnh hưởng của Guardiola đã khiến bóng đá Italy bị ảnh hưởng xấu, khi nhiều người cố gắng sao chép phong cách của ông mà không có đủ khả năng tương tự.",
+    "link": "https://vnexpress.net/capello-guardiola-mat-nhieu-champions-league-vi-kieu-ngao-4860006.html",
+    "cat": "the-thao",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao Capello cho rằng Guardiola mất nhiều Champions League?",
+    "answers": [
+      {
+        "text": "Vì sự kiêu ngạo và thay đổi chiến thuật kỳ lạ.",
+        "correct": true
+      },
+      {
+        "text": "Vì không có đủ cầu thủ giỏi.",
+        "correct": false
+      },
+      {
+        "text": "Vì không đủ may mắn trong các trận đấu.",
+        "correct": false
+      },
+      {
+        "text": "Vì không chú trọng vào phòng ngự.",
         "correct": false
       }
     ]
@@ -1514,6 +1576,33 @@
     ]
   },
   {
+    "title": "Lý do người bệnh viêm khớp nên hạn chế đường",
+    "content": "Bài viết nhấn mạnh rằng người bệnh viêm khớp nên hạn chế tiêu thụ đường để giảm tình trạng viêm và kiểm soát các triệu chứng bệnh. Đường không chỉ làm tăng axit uric mà còn có thể dẫn đến các vấn đề sức khỏe khác như bệnh tim mạch và béo phì, làm trầm trọng thêm tình trạng viêm khớp. Nghiên cứu cho thấy các loại thực phẩm và đồ uống có đường, như soda và bánh ngọt, có thể làm nặng thêm các triệu chứng viêm khớp dạng thấp và thoái hóa khớp. Do đó, người bệnh cần chú ý đến lượng đường nạp vào hàng ngày để cải thiện sức khỏe khớp.",
+    "link": "https://vnexpress.net/ly-do-nguoi-benh-viem-khop-nen-han-che-duong-4859548.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tại sao người bệnh viêm khớp nên hạn chế đường?",
+    "answers": [
+      {
+        "text": "Đường có thể làm tăng tình trạng viêm và đau khớp.",
+        "correct": true
+      },
+      {
+        "text": "Đường giúp cải thiện sức khỏe khớp.",
+        "correct": false
+      },
+      {
+        "text": "Đường là nguồn năng lượng cần thiết cho cơ thể.",
+        "correct": false
+      },
+      {
+        "text": "Đường không ảnh hưởng đến viêm khớp.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thói quen nào khiến sức khỏe phụ nữ giảm sút?",
     "content": "Bài viết điểm qua những thói quen ăn uống và sinh hoạt có thể ảnh hưởng tiêu cực đến sức khỏe của phụ nữ. Những thói quen tưởng chừng như vô hại nhưng lại gây ra sự thay đổi trong quá trình trao đổi chất và nội tiết. Việc nhận thức và thay đổi những thói quen này là rất quan trọng để duy trì sức khỏe tốt cho phái đẹp.",
     "link": "https://vnexpress.net/thoi-quen-nao-khien-suc-khoe-phu-nu-giam-sut-4859901.html",
@@ -1540,33 +1629,6 @@
       },
       {
         "text": "Giữ tâm lý tích cực",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Lý do người bệnh viêm khớp nên hạn chế đường",
-    "content": "Bài viết nhấn mạnh rằng người bệnh viêm khớp nên hạn chế tiêu thụ đường để giảm tình trạng viêm và kiểm soát các triệu chứng bệnh. Đường không chỉ làm tăng axit uric mà còn có thể dẫn đến các vấn đề sức khỏe khác như bệnh tim mạch và béo phì, làm trầm trọng thêm tình trạng viêm khớp. Nghiên cứu cho thấy các loại thực phẩm và đồ uống có đường, như soda và bánh ngọt, có thể làm nặng thêm các triệu chứng viêm khớp dạng thấp và thoái hóa khớp. Do đó, người bệnh cần chú ý đến lượng đường nạp vào hàng ngày để cải thiện sức khỏe khớp.",
-    "link": "https://vnexpress.net/ly-do-nguoi-benh-viem-khop-nen-han-che-duong-4859548.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tại sao người bệnh viêm khớp nên hạn chế đường?",
-    "answers": [
-      {
-        "text": "Đường có thể làm tăng tình trạng viêm và đau khớp.",
-        "correct": true
-      },
-      {
-        "text": "Đường giúp cải thiện sức khỏe khớp.",
-        "correct": false
-      },
-      {
-        "text": "Đường là nguồn năng lượng cần thiết cho cơ thể.",
-        "correct": false
-      },
-      {
-        "text": "Đường không ảnh hưởng đến viêm khớp.",
         "correct": false
       }
     ]
@@ -2264,33 +2326,6 @@
     ]
   },
   {
-    "title": "Lợi ích khi ăn dâu tây thường xuyên",
-    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
-    "answers": [
-      {
-        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
-        "correct": true
-      },
-      {
-        "text": "Tăng huyết áp nhanh chóng.",
-        "correct": false
-      },
-      {
-        "text": "Gây ra tình trạng thừa cân.",
-        "correct": false
-      },
-      {
-        "text": "Làm yếu hệ miễn dịch.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chuyên gia: 'Tiêm gộp nhiều vaccine tạo hiệu quả miễn dịch sớm'",
     "content": "Theo TS.BS Nguyễn An Nghĩa, việc tiêm gộp nhiều vaccine cho trẻ có thể tạo ra hiệu quả miễn dịch tốt mà không làm quá tải hệ miễn dịch. Mặc dù có một số lo ngại từ phụ huynh về an toàn, nhưng các nghiên cứu cho thấy việc tiêm vaccine cùng lúc không chỉ tiết kiệm thời gian và chi phí cho phụ huynh mà còn giúp hệ miễn dịch trẻ hình thành nhiều kháng thể bảo vệ. Tuy nhiên, cần phải tuân thủ các quy định và khám sàng lọc trước khi tiêm để đảm bảo an toàn cho trẻ.",
     "link": "https://vnexpress.net/chuyen-gia-tiem-gop-nhieu-vaccine-tao-hieu-qua-mien-dich-som-4859682.html",
@@ -2313,6 +2348,33 @@
       },
       {
         "text": "Không cần tiêm vaccine nữa",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lợi ích khi ăn dâu tây thường xuyên",
+    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
+    "answers": [
+      {
+        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
+        "correct": true
+      },
+      {
+        "text": "Tăng huyết áp nhanh chóng.",
+        "correct": false
+      },
+      {
+        "text": "Gây ra tình trạng thừa cân.",
+        "correct": false
+      },
+      {
+        "text": "Làm yếu hệ miễn dịch.",
         "correct": false
       }
     ]
