Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -143,6 +143,33 @@
     ]
   },
   {
+    "title": "Cụ bà đi xe đạp lao vào ôtô",
+    "content": "Vào ngày 9/3 tại La Sơn, Thanh Hóa, một cụ bà lớn tuổi đi xe đạp đã lao ra đường ngay khi ôtô đi tới. Dù không xảy ra va chạm nhờ sự phản ứng nhanh của tài xế, cụ bà đã loạng choạng và tự ngã ra đường. Người dân xung quanh đã giúp đỡ cụ và dắt xe đi tiếp. Tình huống này nhấn mạnh tầm quan trọng của việc quan sát kỹ lưỡng khi tham gia giao thông, đặc biệt đối với người lớn tuổi.",
+    "link": "https://vnexpress.net/cu-ba-di-xe-dap-lao-vao-oto-4859932.html",
+    "cat": "phap-luat",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Cụ bà đi xe đạp đã gặp phải tình huống gì trên đường?",
+    "answers": [
+      {
+        "text": "Cụ bà lao vào ôtô nhưng không va chạm.",
+        "correct": true
+      },
+      {
+        "text": "Cụ bà bị ôtô tông mạnh.",
+        "correct": false
+      },
+      {
+        "text": "Cụ bà bị thương nặng.",
+        "correct": false
+      },
+      {
+        "text": "Cụ bà không gặp sự cố nào.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ukraine đồng ý ngừng bắn 30 ngày với Nga, ông Trump lên tiếng",
     "content": "Ukraine đã đồng ý ngừng bắn 30 ngày với Nga trong một thỏa thuận do Tổng thống Mỹ Donald Trump thúc đẩy. Ông Trump đã thông báo sẽ điện đàm với Tổng thống Nga Vladimir Putin và mời Tổng thống Ukraine Volodymyr Zelensky trở lại Nhà Trắng. Thỏa thuận này được đưa ra sau cuộc hội đàm kéo dài 8 giờ giữa phái đoàn Mỹ và Ukraine tại Ả Rập Xê Út. Tuy nhiên, Moscow vẫn chưa đưa ra phản ứng chính thức về đề xuất này.",
     "link": "https://dantri.com.vn/the-gioi/ukraine-dong-y-ngung-ban-30-ngay-voi-nga-ong-trump-len-tieng-20250312043333942.htm",
@@ -931,6 +958,33 @@
     ]
   },
   {
+    "title": "Capello: 'Guardiola mất nhiều Champions League vì kiêu ngạo'",
+    "content": "Cựu HLV Fabio Capello cho rằng Pep Guardiola đã mất nhiều cơ hội giành Champions League do sự kiêu ngạo của mình. Theo ông, Guardiola thường thay đổi chiến thuật một cách kỳ lạ trong các trận đấu quyết định, khiến ông không tập trung vào sức mạnh của cầu thủ. Capello cũng nhấn mạnh rằng ảnh hưởng của Guardiola đã khiến bóng đá Italy bị ảnh hưởng xấu, khi nhiều người cố gắng sao chép phong cách của ông mà không có đủ khả năng tương tự.",
+    "link": "https://vnexpress.net/capello-guardiola-mat-nhieu-champions-league-vi-kieu-ngao-4860006.html",
+    "cat": "the-thao",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao Capello cho rằng Guardiola mất nhiều Champions League?",
+    "answers": [
+      {
+        "text": "Vì sự kiêu ngạo và thay đổi chiến thuật kỳ lạ.",
+        "correct": true
+      },
+      {
+        "text": "Vì không có đủ cầu thủ giỏi.",
+        "correct": false
+      },
+      {
+        "text": "Vì không đủ may mắn trong các trận đấu.",
+        "correct": false
+      },
+      {
+        "text": "Vì không chú trọng vào phòng ngự.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ai dễ bị ngưng thở khi ngủ?",
     "content": "Hội chứng ngưng thở khi ngủ không chỉ xảy ra ở người lớn mà còn có thể ảnh hưởng đến trẻ em. Nhiều người có suy nghĩ sai lầm rằng trẻ em không mắc phải tình trạng này. Bài viết chỉ ra rằng có nhiều yếu tố làm tăng nguy cơ mắc hội chứng ngưng thở khi ngủ ở trẻ em, do đó cần chú ý và phát hiện sớm để điều trị kịp thời.",
     "link": "https://vnexpress.net/ai-de-bi-ngung-tho-khi-ngu-4859945.html",
@@ -957,33 +1011,6 @@
       },
       {
         "text": "Người có bệnh tim mạch",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Capello: 'Guardiola mất nhiều Champions League vì kiêu ngạo'",
-    "content": "Cựu HLV Fabio Capello cho rằng Pep Guardiola đã mất nhiều cơ hội giành Champions League do sự kiêu ngạo của mình. Theo ông, Guardiola thường thay đổi chiến thuật một cách kỳ lạ trong các trận đấu quyết định, khiến ông không tập trung vào sức mạnh của cầu thủ. Capello cũng nhấn mạnh rằng ảnh hưởng của Guardiola đã khiến bóng đá Italy bị ảnh hưởng xấu, khi nhiều người cố gắng sao chép phong cách của ông mà không có đủ khả năng tương tự.",
-    "link": "https://vnexpress.net/capello-guardiola-mat-nhieu-champions-league-vi-kieu-ngao-4860006.html",
-    "cat": "the-thao",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Tại sao Capello cho rằng Guardiola mất nhiều Champions League?",
-    "answers": [
-      {
-        "text": "Vì sự kiêu ngạo và thay đổi chiến thuật kỳ lạ.",
-        "correct": true
-      },
-      {
-        "text": "Vì không có đủ cầu thủ giỏi.",
-        "correct": false
-      },
-      {
-        "text": "Vì không đủ may mắn trong các trận đấu.",
-        "correct": false
-      },
-      {
-        "text": "Vì không chú trọng vào phòng ngự.",
         "correct": false
       }
     ]
@@ -1936,33 +1963,6 @@
     ]
   },
   {
-    "title": "Chuyên gia: 'Tiêm gộp nhiều vaccine tạo hiệu quả miễn dịch sớm'",
-    "content": "Theo TS.BS Nguyễn An Nghĩa, việc tiêm gộp nhiều vaccine cho trẻ có thể tạo ra hiệu quả miễn dịch tốt mà không làm quá tải hệ miễn dịch. Mặc dù có một số lo ngại từ phụ huynh về an toàn, nhưng các nghiên cứu cho thấy việc tiêm vaccine cùng lúc không chỉ tiết kiệm thời gian và chi phí cho phụ huynh mà còn giúp hệ miễn dịch trẻ hình thành nhiều kháng thể bảo vệ. Tuy nhiên, cần phải tuân thủ các quy định và khám sàng lọc trước khi tiêm để đảm bảo an toàn cho trẻ.",
-    "link": "https://vnexpress.net/chuyen-gia-tiem-gop-nhieu-vaccine-tao-hieu-qua-mien-dich-som-4859682.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Việc tiêm gộp nhiều vaccine cho trẻ có lợi gì?",
-    "answers": [
-      {
-        "text": "Tạo hiệu quả miễn dịch tốt hơn",
-        "correct": true
-      },
-      {
-        "text": "Giảm chi phí và thời gian tiêm",
-        "correct": false
-      },
-      {
-        "text": "Tăng nguy cơ phản ứng phụ",
-        "correct": false
-      },
-      {
-        "text": "Không cần tiêm vaccine nữa",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Lợi ích khi ăn dâu tây thường xuyên",
     "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
     "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
@@ -1985,6 +1985,33 @@
       },
       {
         "text": "Làm yếu hệ miễn dịch.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chuyên gia: 'Tiêm gộp nhiều vaccine tạo hiệu quả miễn dịch sớm'",
+    "content": "Theo TS.BS Nguyễn An Nghĩa, việc tiêm gộp nhiều vaccine cho trẻ có thể tạo ra hiệu quả miễn dịch tốt mà không làm quá tải hệ miễn dịch. Mặc dù có một số lo ngại từ phụ huynh về an toàn, nhưng các nghiên cứu cho thấy việc tiêm vaccine cùng lúc không chỉ tiết kiệm thời gian và chi phí cho phụ huynh mà còn giúp hệ miễn dịch trẻ hình thành nhiều kháng thể bảo vệ. Tuy nhiên, cần phải tuân thủ các quy định và khám sàng lọc trước khi tiêm để đảm bảo an toàn cho trẻ.",
+    "link": "https://vnexpress.net/chuyen-gia-tiem-gop-nhieu-vaccine-tao-hieu-qua-mien-dich-som-4859682.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Việc tiêm gộp nhiều vaccine cho trẻ có lợi gì?",
+    "answers": [
+      {
+        "text": "Tạo hiệu quả miễn dịch tốt hơn",
+        "correct": true
+      },
+      {
+        "text": "Giảm chi phí và thời gian tiêm",
+        "correct": false
+      },
+      {
+        "text": "Tăng nguy cơ phản ứng phụ",
+        "correct": false
+      },
+      {
+        "text": "Không cần tiêm vaccine nữa",
         "correct": false
       }
     ]
