--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,95 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Sử dụng AI để vi phạm bản quyền đang lan rộng",
+    "content": "Sử dụng trí tuệ nhân tạo (AI) để vi phạm bản quyền đang trở thành một vấn đề nghiêm trọng trên mạng xã hội, khi người dùng có thể dễ dàng sao chép, chỉnh sửa và đăng tải nội dung không bản quyền. Việc làm này không chỉ gây tổn thất cho các nhà sản xuất và tổ chức, mà còn đặt ra thách thức lớn cho việc bảo vệ bản quyền. Các chuyên gia khuyến nghị cần có các biện pháp công nghệ như watermark và fingerprint để phát hiện vi phạm, đồng thời yêu cầu điều chỉnh luật pháp về sở hữu trí tuệ để đối phó với tình trạng này.",
+    "link": "https://tuoitre.vn/su-dung-ai-de-vi-pham-ban-quyen-dang-lan-rong-20250311223931783.htm",
+    "cat": "phap-luat",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tình trạng vi phạm bản quyền bằng AI đang diễn ra như thế nào?",
+    "answers": [
+      {
+        "text": "Sử dụng AI để sao chép nội dung đang gia tăng",
+        "correct": true
+      },
+      {
+        "text": "Vi phạm bản quyền đang giảm dần",
+        "correct": false
+      },
+      {
+        "text": "AI không liên quan đến vi phạm bản quyền",
+        "correct": false
+      },
+      {
+        "text": "Người dùng không biết đến vi phạm bản quyền",
+        "correct": false
+      },
+      {
+        "text": "Vi phạm bản quyền chỉ xảy ra trên TV",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đam mê chạy bộ của runner vừa điếc vừa mù",
+    "content": "Mario Martinez Castano, một runner khiếm thính và khiếm thị đến từ Tây Ban Nha, đã lập kỷ lục Guinness khi trở thành người đầu tiên hoàn thành cuộc đua kéo dài 24 giờ. Dù mắc Hội chứng Usher, gây mất khả năng nghe và nhìn, Mario không bỏ cuộc mà tìm thấy động lực từ chạy bộ. Anh đã chạy được 124 km trong thời gian 24 giờ và muốn truyền cảm hứng cho những người gặp khó khăn khác. Hiện tại, Mario đang chuẩn bị cho mục tiêu lập kỷ lục chạy 12 giờ trên máy chạy bộ và tham gia Marathon Santa Eularia Ibiza.",
+    "link": "https://vnexpress.net/dam-me-chay-bo-cua-runner-vua-diec-vua-mu-4860102.html",
+    "cat": "the-thao",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Mario Martinez Castano đã lập kỷ lục gì trong cuộc đua 24 giờ?",
+    "answers": [
+      {
+        "text": "Hoàn thành cuộc đua kéo dài 24 giờ",
+        "correct": true
+      },
+      {
+        "text": "Chạy 100 km trong 12 giờ",
+        "correct": false
+      },
+      {
+        "text": "Chạy marathon 42 km",
+        "correct": false
+      },
+      {
+        "text": "Lập kỷ lục chạy 5 km",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tin tức sáng 12-3: Sẽ có Bệnh viện Từ Dũ 2 tại Cần Giờ; Thêm một nhãn thời trang Việt đóng cửa",
+    "content": "Sở Y tế TP.HCM đã đề xuất thành lập cơ sở 2 của Bệnh viện Từ Dũ tại huyện Cần Giờ nhằm đáp ứng nhu cầu khám chữa bệnh cho người dân địa phương. Cơ sở này sẽ hoạt động dưới mô hình bệnh viện đa khoa, hỗ trợ việc chăm sóc sức khỏe cho cư dân và du khách khi dự án cảng trung chuyển quốc tế được triển khai. Đồng thời, thương hiệu thời trang The Peachy cũng thông báo đóng cửa sau 5 năm hoạt động, do không thể tiếp tục duy trì trong bối cảnh thị trường khó khăn.",
+    "link": "https://tuoitre.vn/tin-tuc-sang-12-3-se-co-benh-vien-tu-du-2-tai-can-gio-them-mot-nhan-thoi-trang-viet-dong-cua-20250311153619073.htm",
+    "cat": "suc-khoe",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Bệnh viện Từ Dũ có cơ sở 2 tại đâu?",
+    "answers": [
+      {
+        "text": "Cần Giờ",
+        "correct": true
+      },
+      {
+        "text": "Thủ Đức",
+        "correct": false
+      },
+      {
+        "text": "Bình Thạnh",
+        "correct": false
+      },
+      {
+        "text": "Quận 1",
+        "correct": false
+      },
+      {
+        "text": "Gò Vấp",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Kane đưa Bayern vào tứ kết Champions League",
     "content": "Harry Kane đã có một màn trình diễn ấn tượng khi ghi một bàn và kiến tạo một bàn giúp Bayern Munich đánh bại Bayer Leverkusen 2-0 ở trận lượt về vòng 1/8 Champions League, qua đó giành chiến thắng chung cuộc 5-0. Kane trở thành cầu thủ người Anh đầu tiên đạt mốc 10 bàn trong một mùa giải Champions League. Bayern sẽ gặp Inter Milan ở tứ kết, với trận lượt đi diễn ra tại Allianz Arena vào ngày 8/4.",
     "link": "https://vnexpress.net/kane-dua-bayern-vao-tu-ket-champions-league-4860106.html",
@@ -1936,28 +2025,28 @@
     ]
   },
   {
-    "title": "Lợi ích khi ăn dâu tây thường xuyên",
-    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
+    "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
+    "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
+    "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
     "cat": "suc-khoe",
-    "positivity": 9,
+    "positivity": 7,
     "importance": 8,
-    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
+    "question": "Gan nhiễm mỡ có thể chuyển thành viêm gan không?",
     "answers": [
       {
-        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
+        "text": "Có, nhưng không phải tất cả trường hợp.",
         "correct": true
       },
       {
-        "text": "Tăng huyết áp nhanh chóng.",
+        "text": "Không, gan nhiễm mỡ không ảnh hưởng gì.",
         "correct": false
       },
       {
-        "text": "Gây ra tình trạng thừa cân.",
+        "text": "Chỉ có trường hợp gan nhiễm mỡ do bia rượu mới tiến triển.",
         "correct": false
       },
       {
-        "text": "Làm yếu hệ miễn dịch.",
+        "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
         "correct": false
       }
     ]
@@ -1990,28 +2079,28 @@
     ]
   },
   {
-    "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
-    "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
-    "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
+    "title": "Lợi ích khi ăn dâu tây thường xuyên",
+    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
     "cat": "suc-khoe",
-    "positivity": 7,
+    "positivity": 9,
     "importance": 8,
-    "question": "Gan nhiễm mỡ có thể chuyển thành viêm gan không?",
+    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
     "answers": [
       {
-        "text": "Có, nhưng không phải tất cả trường hợp.",
+        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
         "correct": true
       },
       {
-        "text": "Không, gan nhiễm mỡ không ảnh hưởng gì.",
+        "text": "Tăng huyết áp nhanh chóng.",
         "correct": false
       },
       {
-        "text": "Chỉ có trường hợp gan nhiễm mỡ do bia rượu mới tiến triển.",
+        "text": "Gây ra tình trạng thừa cân.",
         "correct": false
       },
       {
-        "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
+        "text": "Làm yếu hệ miễn dịch.",
         "correct": false
       }
     ]
@@ -4290,32 +4379,32 @@
     ]
   },
   {
-    "title": "Người trẻ chọn sếp",
-    "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
-    "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
-    "cat": "kinh-doanh",
+    "title": "Tỷ phú Elon Musk chỉ cách vui vẻ, tự tin học tập dù AI phát triển bùng nổ",
+    "content": "Tỷ phú Elon Musk gần đây đã chia sẻ hai lời khuyên cho những người trẻ trong bối cảnh trí tuệ nhân tạo (AI) phát triển mạnh mẽ, có khả năng thay thế nhiều công việc. Ông khuyến khích giới trẻ nên theo đuổi đam mê và trở nên hữu ích cho cộng đồng. Musk cũng nhấn mạnh tầm quan trọng của nỗ lực lao động để thích ứng với sự thay đổi do AI mang lại, đồng thời khuyến khích mọi người không nên nản lòng trước sự cạnh tranh từ công nghệ.",
+    "link": "https://dantri.com.vn/giao-duc/ty-phu-elon-musk-chi-cach-vui-ve-tu-tin-hoc-tap-du-ai-phat-trien-bung-no-20250310160338475.htm",
+    "cat": "gia-dinh",
     "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao người trẻ lại chọn sếp khi tìm việc?",
+    "importance": 9,
+    "question": "Elon Musk đã đưa ra những lời khuyên gì cho giới trẻ trong bối cảnh AI phát triển?",
     "answers": [
       {
-        "text": "Vì họ muốn làm việc với người có khả năng lãnh đạo tốt và phù hợp với phong cách làm việc của mình.",
+        "text": "Theo đuổi đam mê và trở nên hữu ích cho cộng đồng",
         "correct": true
       },
       {
-        "text": "Bởi vì họ thích làm việc trong môi trường có nhiều cơ hội thăng tiến.",
+        "text": "Nên từ bỏ ước mơ và tìm một công việc ổn định",
         "correct": false
       },
       {
-        "text": "Vì họ ưu tiên lương thưởng cao hơn mọi yếu tố khác.",
+        "text": "Chỉ cần làm việc ít hơn 6 tiếng mỗi ngày",
         "correct": false
       },
       {
-        "text": "Bởi vì họ không muốn làm việc dưới sự quản lý nghiêm khắc.",
+        "text": "Tập trung vào việc học các công nghệ mới",
         "correct": false
       },
       {
-        "text": "Vì họ muốn có thời gian làm việc thoải mái.",
+        "text": "Không cần lo lắng về sự phát triển của AI",
         "correct": false
       }
     ]
@@ -4348,32 +4437,32 @@
     ]
   },
   {
-    "title": "Tỷ phú Elon Musk chỉ cách vui vẻ, tự tin học tập dù AI phát triển bùng nổ",
-    "content": "Tỷ phú Elon Musk gần đây đã chia sẻ hai lời khuyên cho những người trẻ trong bối cảnh trí tuệ nhân tạo (AI) phát triển mạnh mẽ, có khả năng thay thế nhiều công việc. Ông khuyến khích giới trẻ nên theo đuổi đam mê và trở nên hữu ích cho cộng đồng. Musk cũng nhấn mạnh tầm quan trọng của nỗ lực lao động để thích ứng với sự thay đổi do AI mang lại, đồng thời khuyến khích mọi người không nên nản lòng trước sự cạnh tranh từ công nghệ.",
-    "link": "https://dantri.com.vn/giao-duc/ty-phu-elon-musk-chi-cach-vui-ve-tu-tin-hoc-tap-du-ai-phat-trien-bung-no-20250310160338475.htm",
-    "cat": "gia-dinh",
+    "title": "Người trẻ chọn sếp",
+    "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
+    "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
+    "cat": "kinh-doanh",
     "positivity": 8,
-    "importance": 9,
-    "question": "Elon Musk đã đưa ra những lời khuyên gì cho giới trẻ trong bối cảnh AI phát triển?",
+    "importance": 7,
+    "question": "Tại sao người trẻ lại chọn sếp khi tìm việc?",
     "answers": [
       {
-        "text": "Theo đuổi đam mê và trở nên hữu ích cho cộng đồng",
+        "text": "Vì họ muốn làm việc với người có khả năng lãnh đạo tốt và phù hợp với phong cách làm việc của mình.",
         "correct": true
       },
       {
-        "text": "Nên từ bỏ ước mơ và tìm một công việc ổn định",
+        "text": "Bởi vì họ thích làm việc trong môi trường có nhiều cơ hội thăng tiến.",
         "correct": false
       },
       {
-        "text": "Chỉ cần làm việc ít hơn 6 tiếng mỗi ngày",
+        "text": "Vì họ ưu tiên lương thưởng cao hơn mọi yếu tố khác.",
         "correct": false
       },
       {
-        "text": "Tập trung vào việc học các công nghệ mới",
+        "text": "Bởi vì họ không muốn làm việc dưới sự quản lý nghiêm khắc.",
         "correct": false
       },
       {
-        "text": "Không cần lo lắng về sự phát triển của AI",
+        "text": "Vì họ muốn có thời gian làm việc thoải mái.",
         "correct": false
       }
     ]
