Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,32 +81,86 @@
     // Example JSON array with news objects
     const newsData = [
   {
-    "title": "Kamax Cub-X - xe nhái Honda Cub sắp ra mắt Đông Nam Á",
-    "content": "Kamax Cub-X, mẫu xe hai bánh mới từ Trung Quốc, dự kiến ra mắt tại Malaysia vào quý III năm 2025 với giá khởi điểm từ 2.000 USD. Xe có thiết kế cổ điển lấy cảm hứng từ Honda Super Cub và sẽ cạnh tranh với Yamaha PG-1. Cub-X trang bị động cơ xăng 125 phân khối với công suất 8,4 mã lực và mô-men xoắn 9,3 Nm, cùng nhiều tùy chọn về phanh và yên xe.",
-    "link": "https://vnexpress.net/kamax-cub-x-xe-nhai-honda-cub-sap-ra-mat-dong-nam-a-4859897.html",
+    "title": "Tôi mua bảo hiểm xe máy nhưng sợ bị rơi, vậy có xuất  trình bản điện tử được không?",
+    "content": "Bài viết giải đáp thắc mắc của độc giả về việc xuất trình bản điện tử của giấy chứng nhận bảo hiểm bắt buộc trách nhiệm dân sự xe máy. Theo quy định, người điều khiển xe máy có thể sử dụng bản điện tử của giấy chứng nhận bảo hiểm khi được tích hợp trong ứng dụng định danh điện tử VNeID. Việc xuất trình bản điện tử được coi là hợp pháp và có giá trị pháp lý tương đương với bản giấy.",
+    "link": "https://tuoitre.vn/toi-mua-bao-hiem-xe-may-nhung-so-bi-roi-vay-co-xuat-trinh-ban-dien-tu-duoc-khong-2025031109455724.htm",
     "cat": "oto-xe-may",
     "positivity": 8,
     "importance": 7,
-    "question": "Kamax Cub-X sẽ ra mắt tại thị trường nào vào quý III năm 2025?",
+    "question": "Tôi có thể sử dụng bản điện tử của giấy chứng nhận bảo hiểm xe máy không?",
     "answers": [
       {
-        "text": "Malaysia",
+        "text": "Có, bạn có thể xuất trình bản điện tử.",
         "correct": true
       },
       {
-        "text": "Việt Nam",
+        "text": "Không, chỉ được phép sử dụng bản giấy.",
         "correct": false
       },
       {
-        "text": "Thái Lan",
+        "text": "Chỉ khi có sự cho phép của công an.",
         "correct": false
       },
       {
-        "text": "Indonesia",
+        "text": "Cần phải mang theo cả hai bản.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lớp xóa mù chữ ở xóm trọ nghèo",
+    "content": "Lớp xóa mù chữ tại phường Thảo Điền, TP HCM, đã giúp hàng chục trẻ em nghèo, không có giấy tờ, có cơ hội học đọc, viết. Những em nhỏ này, như Nhẫn, sống trong gia đình có hoàn cảnh khó khăn, chủ yếu làm nghề nhặt rác. Lớp học được thành lập bởi một nhóm tình nguyện viên với nỗ lực cải tạo không gian học tập tại khu trọ. Sau nhiều năm hoạt động, các em giờ đây đã có thể đọc viết và tự tin hơn trong cuộc sống.",
+    "link": "https://vnexpress.net/lop-xoa-mu-chu-o-xom-tro-ngheo-4859073.html",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Tại sao lớp xóa mù chữ ở phường Thảo Điền lại quan trọng?",
+    "answers": [
+      {
+        "text": "Nó giúp trẻ em nghèo biết đọc, viết và có cơ hội thay đổi cuộc sống.",
+        "correct": true
+      },
+      {
+        "text": "Nó là nơi vui chơi cho trẻ em.",
         "correct": false
       },
       {
-        "text": "Philippines",
+        "text": "Nó chỉ dạy toán học cho trẻ em.",
+        "correct": false
+      },
+      {
+        "text": "Nó không có ý nghĩa gì đặc biệt.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nghệ sĩ xiếc thương tích đầy người, ngã chấn thương sọ não vẫn \"máu nghề\"",
+    "content": "Nghệ sĩ xiếc Võ Tấn Thành, sau một tai nạn chấn thương sọ não nghiêm trọng, đã phải trải qua nhiều đau đớn trong quá trình hồi phục. Bất chấp tình trạng sức khỏe yếu, anh vẫn thể hiện niềm đam mê mãnh liệt với nghề xiếc và khao khát trở lại sân khấu. Trải qua 13 năm hoạt động trong nghề, Thành không chỉ đối mặt với chấn thương mà còn chứng kiến nhiều đồng nghiệp gặp phải tai nạn tương tự, nhưng tình yêu nghề đã giúp anh vượt qua mọi khó khăn.",
+    "link": "https://dantri.com.vn/giai-tri/nghe-si-xiec-thuong-tich-day-nguoi-nga-chan-thuong-so-nao-van-mau-nghe-20250311195148514.htm",
+    "cat": "giai-tri",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Nghệ sĩ xiếc Võ Tấn Thành đã trải qua chấn thương nào?",
+    "answers": [
+      {
+        "text": "Chấn thương sọ não",
+        "correct": true
+      },
+      {
+        "text": "Gãy xương chân",
+        "correct": false
+      },
+      {
+        "text": "Đứt dây chằng",
+        "correct": false
+      },
+      {
+        "text": "Bỏng da",
+        "correct": false
+      },
+      {
+        "text": "Trật khớp vai",
         "correct": false
       }
     ]
@@ -138,6 +192,64 @@
       },
       {
         "text": "Tổ chức tiệc lớn",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cuộc chiến giữa bác sĩ thật với 'lang băm TikTok'",
+    "content": "Bài viết phản ánh tình trạng bệnh nhân từ chối điều trị y tế do tin tưởng vào thông tin sai lệch trên TikTok, dẫn đến những hậu quả nghiêm trọng. Hai trường hợp điển hình là một phụ nữ mắc ung thư vú và một đàn ông mắc ung thư trực tràng đã từ chối can thiệp y tế, dẫn đến tình trạng sức khỏe nghiêm trọng và cuối cùng là sự ra đi của họ. Các bác sĩ bày tỏ lo ngại về sự lan rộng của các phương pháp chữa bệnh không chính thống và kêu gọi người dân cần thận trọng trong việc tìm kiếm thông tin sức khỏe trên mạng xã hội.",
+    "link": "https://vnexpress.net/cuoc-chien-giua-bac-si-that-voi-lang-bam-tiktok-4855158.html",
+    "cat": "suc-khoe",
+    "positivity": 2,
+    "importance": 9,
+    "question": "Tại sao nhiều bệnh nhân từ chối điều trị y tế?",
+    "answers": [
+      {
+        "text": "Do tin tưởng vào thông tin sai lệch trên TikTok",
+        "correct": true
+      },
+      {
+        "text": "Vì họ không có tiền điều trị",
+        "correct": false
+      },
+      {
+        "text": "Bệnh viện quá đông người",
+        "correct": false
+      },
+      {
+        "text": "Họ không tin vào bác sĩ",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Kamax Cub-X - xe nhái Honda Cub sắp ra mắt Đông Nam Á",
+    "content": "Kamax Cub-X, mẫu xe hai bánh mới từ Trung Quốc, dự kiến ra mắt tại Malaysia vào quý III năm 2025 với giá khởi điểm từ 2.000 USD. Xe có thiết kế cổ điển lấy cảm hứng từ Honda Super Cub và sẽ cạnh tranh với Yamaha PG-1. Cub-X trang bị động cơ xăng 125 phân khối với công suất 8,4 mã lực và mô-men xoắn 9,3 Nm, cùng nhiều tùy chọn về phanh và yên xe.",
+    "link": "https://vnexpress.net/kamax-cub-x-xe-nhai-honda-cub-sap-ra-mat-dong-nam-a-4859897.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Kamax Cub-X sẽ ra mắt tại thị trường nào vào quý III năm 2025?",
+    "answers": [
+      {
+        "text": "Malaysia",
+        "correct": true
+      },
+      {
+        "text": "Việt Nam",
+        "correct": false
+      },
+      {
+        "text": "Thái Lan",
+        "correct": false
+      },
+      {
+        "text": "Indonesia",
+        "correct": false
+      },
+      {
+        "text": "Philippines",
         "correct": false
       }
     ]
